--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
-<router-outlet></router-outlet>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <h1>This is a navbal</h1>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+
+<mat-sidenav-container>
+
+  <mat-sidenav [(opened)]="opened" mode="side">
+    <app-sidebar></app-sidebar>
+  </mat-sidenav>
+
+
+  <mat-sidenav-content>
+    <button mat-button (click)="opened=!opened"><mat-icon>menu</mat-icon></button>
+    <router-outlet></router-outlet>
+
+    <!--   <mat-toolbar color="primary" style="border: solid 5px green; text-align: bottom;">
+      <span>&copy; 2024 My Application</span>
+    </mat-toolbar> -->
+
+  </mat-sidenav-content>
+</mat-sidenav-container>
