maquetado de componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <h1>This is a navbal</h1>
+    <span>Control de Casos</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
@@ -15,10 +15,5 @@
   <mat-sidenav-content>
     <button mat-button (click)="opened=!opened"><mat-icon>menu</mat-icon></button>
     <router-outlet></router-outlet>
-
-    <!--   <mat-toolbar color="primary" style="border: solid 5px green; text-align: bottom;">
-      <span>&copy; 2024 My Application</span>
-    </mat-toolbar> -->
-
   </mat-sidenav-content>
 </mat-sidenav-container>
